# halo-pool

./: .gitignore  Beaker.toml  Cargo.toml  README.md  package-lock.json
.beaker/: state.json
contracts/halo-pool/: Cargo.toml  README.md
contracts/halo-pool/src/: contract.rs  error.rs  formulas.rs  lib.rs  msg.rs  state.rs
deployment_scripts/: contract_setup.js  package-lock.json  package.json
schema/: halo-pool.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_pool.json
